Add ReCaptcha attribute and enhance password handling
This update introduces a ReCaptcha attribute for added security in form submissions. Some minor changes include the addition of a missing method in the GenericCacheService.

--- a/WebFlowTest/Templates/Models/SignUp.html
+++ b/WebFlowTest/Templates/Models/SignUp.html
@@ -227,7 +227,7 @@
                                 <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
 
                                     <div style="font-family:'Helvetica Neue',Arial,sans-serif;font-size:14px;line-height:22px;text-align:center;color:#555;">
-                                        Please send and feedback or bug info<br> to <a href="mailto:numix.software@gmail.com" style="color:#2F67F6">numix.software@gmail.com</a>
+                                        Please send and feedback or bug info<br> to <a href="mailto:EMAIL@gmail.com" style="color:#2F67F6">EMAIL@gmail.com</a>
                                     </div>
 
                                 </td>
